@@ -2,46 +2,87 @@ package iBoxDB.fts;
 
 import iBoxDB.LocalServer.*;
 import iBoxDB.fulltext.Engine;
+import java.io.File;
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.logging.*;
 
 public class SDB {
 
     public static DB.AutoBox search_db;
-    private static boolean isVM;
+
+    private static String lockFile;
 
     public static void init(String path, boolean isVM) {
 
-        Logger.getLogger(SDB.class.getName()).log(Level.INFO, String.format("DBPath=%s", path));
-        SDB.isVM = isVM;
-        DB.root(path);
+        Logger.getLogger(SDB.class.getName()).log(Level.INFO,
+                String.format("DBPath=%s VM=" + isVM, path));
 
-        DB server = new DB(1);
+        lockFile = DB.root(path) + "running_";
+        //BoxSystem.DBDebug.DeleteDBFiles(1);
+
         if (isVM) {
-            //JAVA_OPTS = "$JAVA_OPTS -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -Xmx256m -Xms256m"   
-            server.getConfig().DBConfig.CacheLength
-                    = server.getConfig().DBConfig.mb(32);
-        }
-        server.getConfig().DBConfig.SwapFileBuffer
-                = (int) server.getConfig().DBConfig.mb(2);
-        new Engine().Config(server.getConfig().DBConfig);
-
-        server.getConfig().ensureTable(BURL.class, "URL", "id");
-        server.getConfig().ensureTable(BPage.class, "Page", "id");
-        server.getConfig().ensureIndex(BPage.class, "Page", true, "url(" + BPage.MAX_URL_LENGTH + ")");
-
-        search_db = server.open();
-
-        try (Box box = search_db.cube()) {
-            ArrayList<BURL> list = new ArrayList<BURL>();
-            for (BURL burl : box.select(BURL.class, "from URL")) {
-                list.add(burl);
+            // when JVM on VM, to prevent multiple VM Instances.
+            String str = System.getenv("lockFile");
+            if (str == null) {
+                return;
             }
-            for (BURL burl : list) {
-                box.d("URL", burl.id).delete();
+            lockFile += str;
+            try {
+                if (!new File(lockFile).createNewFile()) {
+                    Logger.getLogger(SDB.class.getName()).log(Level.INFO, "System Running, ResetName and Restart");
+                    return;
+                }
+            } catch (IOException ex) {
+                Logger.getLogger(SDB.class.getName()).log(Level.SEVERE, null, ex);
+                return;
             }
-            box.commit().Assert();
+            for (File f : new File(path).listFiles()) {
+                if (!f.getAbsolutePath().equalsIgnoreCase(lockFile)) {
+                    if (f.getName().startsWith("running")) {
+                        f.delete();
+                    }
+                }
+            }
         }
+
+        try {
+            DB server = new DB(1);
+            if (isVM) {
+                server.getConfig().DBConfig.CacheLength
+                        = server.getConfig().DBConfig.mb(16);
+            }
+            server.getConfig().DBConfig.SwapFileBuffer
+                    = (int) server.getConfig().DBConfig.mb(2);
+            new Engine().Config(server.getConfig().DBConfig);
+
+            server.getConfig().ensureTable(BURL.class, "URL", "id");
+            server.getConfig().ensureTable(BPage.class, "Page", "id");
+            server.getConfig().ensureIndex(BPage.class, "Page", true, "url(" + BPage.MAX_URL_LENGTH + ")");
+
+            search_db = server.open();
+
+            try (Box box = search_db.cube()) {
+                ArrayList<BURL> list = new ArrayList<BURL>();
+                for (BURL burl : box.select(BURL.class, "from URL")) {
+                    list.add(burl);
+                }
+                for (BURL burl : list) {
+                    box.d("URL", burl.id).delete();
+                }
+                box.commit().Assert();
+            }
+        } catch (Throwable ex) {
+            if (search_db != null) {
+                search_db.getDatabase().close();
+            }
+            search_db = null;
+            Logger.getLogger(SDB.class.getName()).log(Level.INFO,
+                    ex.getClass().getName(), ex);
+            return;
+        }
+
+        Logger.getLogger(SDB.class.getName()).log(Level.INFO, "DB Started...");
     }
 
     public static void close() {
@@ -49,6 +90,8 @@ public class SDB {
             search_db.getDatabase().close();
         }
         search_db = null;
+        new File(lockFile).delete();
         Logger.getLogger(SDB.class.getName()).log(Level.INFO, "DBClosed");
     }
+
 }
